# mcp_qa

./: .gitignore  Makefile  app.py  build_index.py  data_layer.py  main.py  mcp_client.py  mcp_server.py  pyproject.toml  start_ui.py
.chainlit/: config.toml
.gradio/flagged/: dataset1.csv
demo/: 01整数随机抽取.py  02随机与规范.py  03斐波那契数列.py  04向量点积计算.py  05数字转中文.py  06按照格式输出小数.py  07摘下时钟.py  08反转输出.py  09生成等比数列.py  10生成等比数列.py  11随机立方和.py  12上三角数列生成.py  13往左偏头是笑脸.py  14等差数列.py  15数字居中二号.py  16随机元素种子.py  17好多右箭头啊.py  18时间与成就值.py  19元素对应相加.py  20给我来个随机列表.py  21又是字符串格式化.py  22数字个数与字母个数.py  23字符数与词组统计.py  24字符数与词组统计.py  25漫无止境的简单格式化.py  26漫无止境的简单格式化.py  27怎么没有一加.py  28数字和.py  29数字和.py  29让我们说中文.py  30倒着说话的结巴.py  31猜猜数字.py  32最大值计算.py  33词除以字.py  34浮点格式.py  35中文字符计数.py  36打折与总额.py  37向量积.py  38小星星.py  39统计中文词语数.py  (+44 more)
mcp_qa/: embeddings.py  file_parser.py  index_manager.py  qa_chain.py  ui.py
mcp_server/: README.md  __init__.py  cli.py  config.py  exceptions.py  server.py  types.py  utils.py
mcp_server/api/: http_server.py
mcp_server/indexing/: cache.py  embeddings.py  manager.py  search.py  storage.py
mcp_server/monitoring/: logger.py
mcp_server/parsers/: base.py  converters.py  docx.py  excel.py  markdown.py  pdf.py  pptx.py  text.py
mcp_server/security/: path_validator.py  permissions.py
mcp_server/tools/: __init__.py  cache.py  file_ops.py  parsers.py  search.py  time.py
mcp_ui/: CONFIG_EXAMPLES.md  README.md  __init__.py  app.py
mcp_ui/clients/: __init__.py  client_manager.py  mcp_client.py  model_adapter.py  model_client.py  (+1 more)
public/: theme.json
(+9 files in other folders)
