[project]
name = "mcp-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.26",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.7",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "docx2txt>=0.9",
    "pypandoc>=1.15",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "python-pptx>=0.6.0",
]
