[project]
name = "mcp-qa"
version = "0.1.0"
description = "MCP QA - A Chainlit application with MCP integration for question answering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "jieba>=0.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo"]
